--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,21 +3,21 @@
     <p>Add a bucket list item</p>  
   </div>  
   <div class="col">
-    <p>Your bucket list</p>  
+    <p>Your bucket list ({{ itemCount }})</p>  
   </div>  
-</div>>
+</div>
 <div class="container color-light">
   <div class="col">
     <p class="sm">Use this form below to add new bucket list goal.</p>  
   <form>
-    <input type="text" class="txt" name="item" placeholder="life goal..."/>
-    <input type="submit" class="btn" value="Add"/>
+    <input type="text" class="txt" name="item" [(ngModel)]="goalText" placeholder="life goal..."/>
+    <input type="submit" class="btn" [value]="btnText" (click)="addItem()"/>
   </form>
   
   </div>  
   <div class="col">
-    <p class="life-container">
-      Climb a mountain.
+    <p class="life-container" *ngFor="let goal of goals">
+      {{ goal }}
     </p>
   </div>  
-</div>>
+</div>
